<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/datamanagement"
        android:textColor="#9f000000"
        android:textSize="18sp"
        android:clickable="false"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2f000000"
        android:clickable="false" />

    <Button
        style="@style/TenFour.ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:background="@drawable/button_default"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:text="@string/settings_label_clearmapcache"/>

    <Button
        style="@style/TenFour.ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:background="@drawable/button_default"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:text="@string/settings_label_clearimagecache"/>

</LinearLayout>