<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notice_frame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="80dp"
    android:paddingBottom="80dp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/notice_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/friend_request_title"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notice_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/notice_header">

            <ImageButton
                android:id="@+id/notice_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chat_avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_avatar_default" />

            <TextView
                android:id="@+id/notice_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/notice_image"
                android:text="@string/username_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_below="@+id/notice_title_text"
                android:layout_toEndOf="@+id/notice_image"
                android:layout_centerVertical="true"
                android:text="@string/friend_request_text"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notice_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notice_body">
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>